--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link" routerLink="/tbd" routerLinkActive="active">My Hunts</a>
       <a class="nav-item nav-link" routerLink="/tbd" routerLinkActive="active">Browse Hunts</a>
-      <a class="nav-item nav-link" routerLink="/tbd" routerLinkActive="active">Create a Hunt</a>
+      <a class="nav-item nav-link" routerLink="create" routerLinkActive="active">Create a Hunt</a> <!-- Now the create-hunts component is accessible -->
     </div>
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link" routerLink="/tbd" routerLinkActive="active">Login</a>
