Added Modal CSS, adjusted create-hunts.html,  added half of Auth Component(WIP)

--- a/src/app/create-hunts/create-hunts.component.css
+++ b/src/app/create-hunts/create-hunts.component.css
@@ -1,6 +1,5 @@
 .form-group {
   flex: auto;
-  width: 20%;
   justify-content: center;
 }
 
@@ -14,4 +13,25 @@
 
 label {
   font-size: 1.5rem;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 50;
+}
+
+.modal-container {
+  position: fixed;
+  top: 30vh;
+  left: 20vw;
+  width: 75vw;
+  padding: 16px;
+  z-index: 100;
+  background: white;
+  box-shadow: 0 2px 8px rbga(0, 0, 0, 0.26)
 }
