Group Identified and Fixed Bugs
Repaired some deprecations, bug fix in auth, form styles update

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Welcome Back!</h1>
   <p>Lets find-it!</p>
-  <form (ngSubmit)="authSubmit(aF)" #aF></form>
+  <form (ngSubmit)="authSubmit(aF)" #aF="ngForm" ></form>
   <label for="email">
     <input
     type="email"
