Setting up Browse Hunts
Mostly layout and debugging methods.

--- a/src/app/browse-hunts/browse-hunts.component.html
+++ b/src/app/browse-hunts/browse-hunts.component.html
@@ -1,1 +1,3 @@
-<p>browse-hunts works!</p>
+<div class="container background-gradient-1" >
+    <button class="btn btn-vapor-success">Set Debug</button>
+</div>
