Fundamental Logic for BrowseHunts
Created framework for BrowseHunts component.

Implemented global-hunt-service.ts to manage incoming Hunt objects

Propose renaming variable within hunt.service.ts hunts -> myHunts to reduce ambiguity

Added BehaviorSubject to both services to broadcast a selected Hunt

Built logic within BrowseHunts to pass a selected hunt to the myHunts array

Built template such that myHunts is displayed on left, where selected hunt is displayed on right

TO DO:
Configure Right side to display database populated list of hunts.
Add search bar template and logic
Add a "ViewHuntDetailFromGlobal" Component as modal to display selectedHunt
Remove Debug Buttons, replace with Real Buttons
Update Logic in hunt.service.ts to eliminate possibility of addind identical hunts (use UID)

--- a/src/styles.css
+++ b/src/styles.css
@@ -96,6 +96,9 @@ a {
 
 /* Card Styles */
 .card {
+  margin: 1em;
+  padding: 1em;
+  border-radius: .25em;
   background-color: #ffccff;
   /* Pink background */
   border-color: #cc00cc;
