--- a/src/app/browse-hunts/browse-hunts.component.html
+++ b/src/app/browse-hunts/browse-hunts.component.html
@@ -1,3 +1,35 @@
-<div class="container background-gradient-1" >
-    <button class="btn btn-vapor-success">Set Debug</button>
+<div class="container background-gradient-1">
+  <div class="row" style="padding: 1em; justify-content: space-around;">
+  <button class="btn btn-vapor-primary"(click)="onDebug()">Set Debug</button>
+  <button class="btn btn-vapor-success"(click)="passDebug()">Pass to Collection</button>
+  </div>
+  <div class="row">
+    <div class="col-4">
+          <div class="card" *ngFor="let hunt of myHunts">
+          <p>{{ hunt.name }}</p>
+        </div>
+    </div>
+  <div class="col-8">
+    <div class="card" *ngIf="selectedHunt; else falseTemplate">
+      <h2>{{ selectedHunt.name }}</h2>
+      <p><b>Start Time:</b><br>
+        {{ selectedHunt.begin }}</p>
+      <p><b>End Time:</b><br>
+        {{ selectedHunt.end }}</p>
+      <p><b>Items to Find:</b><br>
+        <ng-container *ngFor="let item of selectedHunt.itemList; let last = last">
+          {{ item.name }}{{ !last ? ', ' : '' }}
+        </ng-container>
+      </p>
+      <p><b>Availability</b><br>
+        {{ selectedHunt.isProtected === true ? 'Request Access' : 'Open to Join' }}</p>
+    </div>
+    <ng-template #falseTemplate>
+      <div class="card">
+        <h3>No Hunts to Display!</h3>
+      </div>
+    </ng-template>
+  </div>
+  </div>
+
 </div>
