--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,6 +9,8 @@
     </div>
     <div class="navbar-nav ml-auto">
       <a class="nav-item nav-link" routerLink="/tbd" routerLinkActive="active">Login</a>
+      <a class="nav-item nav-link" style="cursor: pointer" (click)="onSave()">Save Hunts</a>
+      <a class="nav-item nav-link" style="cursor: pointer" (click)="onFetch()">Fetch Hunts</a>
     </div>
   </div>
 </nav>
