Fetch Hunts working in Browse Hunts
Updated fetchHunts method in DataService to work
Removed FetchHunts button from Header, and placed in BrowseHunts Component
FetchHunts triggers with ngOnInit()
Updated UI of BrowseHunts to project data correctly
Added but didn't comment-in property for associating UserIDs with our Hunt objects

There is a peskersome bug that relates to parsing out the itemList:Item[] property.  I wanted to chase that down today, but I got whistlebit. Kudos to anyone who can fix that. I'll be AFK until class Thursday most likely.

--- a/src/app/browse-hunts/browse-hunts.component.html
+++ b/src/app/browse-hunts/browse-hunts.component.html
@@ -1,12 +1,13 @@
 <div class="container background-gradient-1">
   <div class="row" style="padding: 1em; justify-content: space-around;">
-  <button class="btn btn-vapor-primary"(click)="onDebug()">Set Debug</button>
-  <button class="btn btn-vapor-success"(click)="passDebug()">Pass to Collection</button>
+  <!-- <button class="btn btn-vapor-primary"(click)="onGetGlobal()">Retrieve Global</button> -->
   </div>
   <div class="row">
     <div class="col-4">
-          <div class="card" *ngFor="let hunt of myHunts">
+          <div class="card" *ngFor="let hunt of displayedHunts">
           <p>{{ hunt.name }}</p>
+          <p>{{ hunt.begin }}</p>
+          <button class="btn btn-vapor-success" (click)="onSelect(hunt.uid)">View Hunt Details</button>
         </div>
     </div>
   <div class="col-8">
