--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,12 +3,21 @@
 
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-item nav-link" routerLink="/tbd" routerLinkActive="active">My Hunts</a>
-      <a class="nav-item nav-link" routerLink="/tbd" routerLinkActive="active">Browse Hunts</a>
-      <a class="nav-item nav-link" routerLink="create" routerLinkActive="active">Create a Hunt</a> <!-- Now the create-hunts component is accessible -->
+      <a class="nav-item nav-link" routerLink="myHunts" routerLinkActive="active" *ngIf="isAuthenticated">My Hunts</a>
+      <a
+      class="nav-item nav-link"
+      routerLink="browse"
+       routerLinkActive="active">Browse Hunts</a>
+      <a class="nav-item nav-link" routerLink="create" routerLinkActive="active"
+      *ngIf="isAuthenticated">Create a Hunt</a> <!-- Now the create-hunts component is accessible -->
     </div>
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link" routerLink="/tbd" routerLinkActive="active">Login</a>
+      <a class="nav-item nav-link" routerLink="auth" routerLinkActive="active"
+      *ngIf="!isAuthenticated">Login</a>
+      <a class="nav-item nav-link"
+      (click)="onLogout()"
+      *ngIf="isAuthenticated">Log-Out</a>
+
     </div>
   </div>
 </nav>
