--- a/src/app/create-hunts/create-hunts-form/create-hunts-form.component.html
+++ b/src/app/create-hunts/create-hunts-form/create-hunts-form.component.html
@@ -2,7 +2,7 @@
 
   <ng-container *ngSwitchCase="undefined">
       <div class="row">
-        <label for="proofs" style="font-size: 1.5em; margin-left: 2rem;">What type of proofs should your new hunt require?</label>
+        <p style="font-size: 1.5em; margin-left: 2rem;">What type of proofs should your new hunt require?</p>
         <div style="margin-left: auto;">
           <button type="button" class="btn btn-vapor-success" style="margin-right: 1em;" (click)="onselectProofs('option1')">None</button>
           <button type="button" class="btn btn-vapor-warn" style="margin-right: 1em;" (click)="onselectProofs('option2')">GeoPoint</button>
@@ -11,27 +11,37 @@
       </ng-container>
 
   <ng-container *ngSwitchCase="'option1'">
-    <div [formGroup]="huntForm">
+    <form [formGroup]="huntForm" (ngSubmit)="onSubmit()">
         <label for="name">Hunt Name:</label>
         <input formControlName="name" class="form-control" type="text" id="name" name="name" required>
 
-        <label for="begin">Beginning Date:</label>
-        <input formControlName="begin" class="form-control" type="date" id="begin" name="begin" required>
+        <div class="row" style="justify-content: space-between;">
+          <div style="margin: auto;">
+            <label for="begin">Beginning Date:</label>
+            <input formControlName="begin" class="form-control" type="date" id="begin" name="begin" required>
+          </div>
 
-        <label for="end">Ending Date:</label>
-        <input formControlName="end" class="form-control" type="date" id="end" name="end" required>
-
-        <div class="row card" *ngFor="let itemForm of items.controls; let i = index">
-          <!-- <div [formGroup]="itemForm"> -->
-            <label for="item">Item:</label>
-            <input formControlName="item" class="form-control" type="text" id="item" name="item" required>
-            <button type="button" style="margin-left: auto; margin-top: 1rem;" class="col-2 btn btn-vapor-success"
-            (click)="addItems();">Add ➕</button>
-          <!-- </div> -->
+          <div style="margin: auto;">
+          <label for="end">Ending Date:</label>
+          <input formControlName="end" class="form-control" type="date" id="end" name="end" required>
+          </div>
         </div>
 
-        <button type="submit" class="btn btn-vapor-success">Submit</button>
-      </div>
+      <hr>
+
+      <div class="container card" style="margin:auto">
+        <h2>Item List:</h2>
+          <div class="row card" *ngFor="let item of item.controls; let i = index">
+              <label for="item">Item:</label>
+              <input formControlName="item" class="form-control" type="text" id="item" name="item" required>
+            </div>
+            <button type="button" style="margin-left: auto; margin-top: 1rem;" class="btn btn-vapor-success"
+            (click)="addItem();">➕ Add an Item</button>
+        </div>
+
+
+        <button type="submit" class="btn btn-vapor-success" [disabled]="!huntForm.valid">Submit</button>
+      </form>
   </ng-container>
 
   <ng-container *ngSwitchCase="'option2'">
