--- a/src/app/create-hunts/create-hunts-form/create-hunts-form.component.html
+++ b/src/app/create-hunts/create-hunts-form/create-hunts-form.component.html
@@ -30,14 +30,21 @@
       <hr>
 
       <div class="container card" style="margin:auto">
-        <h2>Item List:</h2>
-          <div class="row card" *ngFor="let item of item.controls; let i = index">
-              <label for="item">Item:</label>
-              <input formControlName="item" class="form-control" type="text" id="item" name="item" required>
+        <div formArrayName="item">
+          <h2>Item List </h2>
+          <div class="row" *ngFor="let item of item.controls; let i = index">
+            <div class="input-group" style="margin: 1rem;">
+              <label for="item-{{i}}"></label>
+              <input [formControlName]="i" class="form-control" type="text" id="item-{{i}}" name="item" required>
+              <div class="input-group-append">
+                <button type="button" class="btn btn-vapor-warn" (click)="removeItem(i);">❌ Remove</button>
+              </div>
             </div>
-            <button type="button" style="margin-left: auto; margin-top: 1rem;" class="btn btn-vapor-success"
-            (click)="addItem();">➕ Add an Item</button>
+          </div>
+          <button type="button" style="margin-left: auto; margin-top: 1rem;" class="btn btn-vapor-success"
+          (click)="addItem();">➕ Add an Item</button>
         </div>
+      </div>
 
 
         <button type="submit" class="btn btn-vapor-success" [disabled]="!huntForm.valid">Submit</button>
