--- a/src/app/create-hunts/create-hunts-form/create-hunts-form.component.html
+++ b/src/app/create-hunts/create-hunts-form/create-hunts-form.component.html
@@ -1,7 +1,7 @@
 <div style="height: 70vh; overflow-y: auto;">
 <div class="item-container card">
 
-    <form [formGroup]="huntForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="huntForm" (ngSubmit)="onSubmit();">
         <label for="name"><h3>Hunt Name:</h3></label>
         <input formControlName="name" class="form-control" type="text" id="name" name="name" required>
 
@@ -36,20 +36,20 @@
           <h4>Item List </h4>
           <div class="row" *ngFor="let item of item.controls; let i = index">
             <div class="input-group" style="margin: 1rem;">
-              <label for="item-{{i}}"></label>
+              <label for="item-{{i}}" style="width: 2rem;"><h5>{{i+1}}:</h5></label>
               <input [formControlName]="i" class="form-control" type="text" id="item-{{i}}" name="item" required>
               <div class="input-group-append">
-                <button type="button" class="btn btn-vapor-warn" (click)="removeItem(i);">❌ Remove</button>
+                <button type="button" class="btn btn-vapor-warn" (click)="removeItem(i);" *ngIf="!isLastItem(i)">❌ Remove</button>
               </div>
             </div>
           </div>
-          <button type="button" style="margin-left: auto; margin-top: 1rem;" class="btn btn-vapor-success"
-          (click)="addItem();">➕ Add an Item</button>
+          <!-- <button type="button" style="margin-left: auto; margin-top: 1rem;" class="btn btn-vapor-success"
+          (click)="addItem();">➕ Add an Item</button> -->
         </div>
       </div>
 
           <div style="margin: 1em; display: flex; justify-content: flex-end;">
-            <button type="submit" class="btn btn-vapor-success" [disabled]="!huntForm.valid">Submit</button>
+            <button type="submit" class="btn btn-vapor-success" [disabled]="!isFormValidExceptLastItem()">Submit</button>
           </div>
       </form>
 
