some work on my hunts component

--- a/src/app/create-hunts/create-hunts.component.html
+++ b/src/app/create-hunts/create-hunts.component.html
@@ -109,9 +109,9 @@
         </button>
 
         <button (click)="passDebugItem()" type="button" class="btn btn-vapor-primary">Pass in Debug Item</button>
-        <!-- <button [disabled]="!f.valid" class="btn btn-vapor-primary" type="submit">
+        <button [disabled]="!f.valid" class="btn btn-vapor-primary" type="submit">
           {{ isEditingHunt ? "Update" : "Create" }}
-        </button> -->
+        </button>
     </form>
   </div>
 </div>
