new DB service method

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,6 +1,7 @@
 <div class="container background-gradient-1">
   <div class="card">
     <h1>Let's Get Moving!</h1>
+    <button class="btn btn-vapor-success" routerLink="auth">Log In</button>
   </div>
   <div class="card">
       <img href="">
