--- a/src/app/my-hunts/my-hunts.component.html
+++ b/src/app/my-hunts/my-hunts.component.html
@@ -7,7 +7,7 @@
             <button class="btn btn-vapor-success" (click)="onSelectHunt(hunt.uid)">View Hunt Details</button>
           </div>
       </div>
-    <div class="col-8">
+    <!-- <div class="col-8">
       <div class="card cardRight" *ngIf="selectedHunt">
         <h2>{{ selectedHunt.name }}</h2>
         <p><b>Start Time:</b><br>
@@ -21,4 +21,57 @@
         </p>
         <p><b>Availability</b><br>
           {{ selectedHunt.isProtected === true ? 'Request Access' : 'Open to Join' }}</p>
+      </div> -->
+
+<div class="col-8">
+<div *ngIf="selectedHunt">
+      <div class="cardRight">
+        <div class="item-container card col-md-8" >
+
+          <div>
+            <label><h3>Hunt Name:</h3></label>
+            <div>{{ selectedHunt.name }}</div>
+          </div>
+
+          <hr>
+
+          <div class="row">
+
+            <div class="col-md-6">
+              <div class="card">
+                <label><h5>Beginning Date:</h5></label>
+                <div>{{ selectedHunt.begin }}</div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="card">
+                <label><h5>Ending Date:</h5></label>
+                <div>{{ selectedHunt.end }}</div>
+              </div>
+            </div>
+
+          </div>
+
+          <hr>
+
+          <div class="container card" style="margin:auto">
+            <div>
+              <h4>Item List </h4>
+              <div class="row" *ngFor="let item of selectedHunt.itemList; let i = index">
+                <div class="input-group" style="margin: .5rem;">
+                  <label style="width: 2rem;"><h5>{{i+1}}:</h5></label>
+                    <h5 [ngClass]="{'notFound': !item.huntStatus, 'found': item.huntStatus}">{{ item.name }}</h5>
+                    <button *ngIf="!item.huntStatus" type="button" class="btn btn-vapor-success check" (click)="onFind(i)">✓</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div style="margin: 1em; display: flex; justify-content: flex-end;">
+            <button type="button" class="btn btn-vapor-success" (click)="onComplete()">Complete Hunt</button>
+          </div>
+        </div>
       </div>
+    </div>
+  </div>
